blocks/places.css
.places {
    max-width: 984px;
    margin: 0 auto;
}

.place {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: auto auto 1fr;
    grid-template-areas: "title artist"
        "image text"
        "button text";
    row-gap: 8%;
    margin-bottom: 15%;
    column-gap: 4%;
}

.place__title {
    grid-area: title;
    font-weight: 900;
    font-size: 72px;
    line-height: 1.1;
    margin: 5% 0 0;
}

.place__city {
    display: block;
}

.place__image {
    grid-area: image;
    max-width: 460px;
    object-fit: contain;
}

.place__artist {
    grid-area: artist;
    align-self: end;
}

.place__artist-title {
    color: #AAAAAA;
    font-weight: 400;
    font-size: 12px;
    line-height: 15px;
    letter-spacing: 0.12em;
    text-transform: uppercase;
}

.place__artist-name {
    font-weight: 400;
    font-size: 18px;
    line-height: 22px;
    margin: 0;
}

.place__button {
    grid-area: button;
    background: #0278FE;
    border-radius: 4px;
    font-weight: 600;
    font-size: 18px;
    line-height: 22px;
    color: white;
    text-decoration: none;
    text-align: center;
    max-width: 248px;
    padding: 13px 15px;
    align-self: start;
    transition: background linear 0.3s;
}

.place__button:hover {
    background: #0063D2;
}

.place__paragraphs {
    grid-area: text;
}

.place__paragraph {
    font-weight: 400;
    font-size: 18px;
    line-height: 1.6;
    margin: 0 0 5%;
}

@media screen and (max-width: 768px) {
    .place {
        margin: 25px 24px 30%;
        grid-template-columns: 50% 50%;
        gap: 5%;
    }

    .place__title {
        font-size: 35px;
        align-self: end;
        max-width: 340px;
    }

    .place__city {
        display: inline;
    }

    .place__paragraph {
        font-size: 16px;
    }

    .place__image {
        max-width: 100%;
    }
}

@media screen and (max-width: 320px) {
    .place {
        display: flex;
        flex-direction: column;
        margin: 0 0 10%;
        row-gap: 10px;
    }

    .place__title {
        font-size: 32px;
        max-width: 280px;
        align-self: flex-start;
        margin-left: 16px;
    }

    .place__paragraph {
        font-size: 16px;
        margin-left: 16px;
        margin-right: 16px;
    }

    .place__image {
        max-width: 340px;
    }

    .place__button {
        order: 2;
        align-self: center;
    }

    .place__artist {
        align-self: flex-start;
        margin-left: 16px;
    }

    .place__artist-title {
        margin: 5px 0;
    }
}

